JPP/interpreter/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Grammar/Par.y
-----------------------------------------------------------------------------

state 0 contains 1 reduce/reduce conflicts.
state 3 contains 1 shift/reduce conflicts.
state 8 contains 2 reduce/reduce conflicts.
state 13 contains 1 shift/reduce conflicts.
state 16 contains 1 shift/reduce conflicts.
state 43 contains 1 reduce/reduce conflicts.
state 44 contains 1 reduce/reduce conflicts.
state 45 contains 1 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 81 contains 2 reduce/reduce conflicts.
state 90 contains 1 shift/reduce conflicts.
state 110 contains 1 reduce/reduce conflicts.
state 116 contains 1 reduce/reduce conflicts.
state 141 contains 1 reduce/reduce conflicts.
state 145 contains 1 reduce/reduce conflicts.

rule 6 is unused
rule 26 is unused
rule 27 is unused
rule 28 is unused
rule 29 is unused
rule 30 is unused
rule 44 is unused
rule 45 is unused
rule 46 is unused
rule 88 is unused
rule 89 is unused
rule 90 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> '{' ListStmt '}'                          (5)
	ListStmt ->                                        (6)
	ListStmt -> Stmt ListStmt                          (7)
	ListStmt ->                                        (8)
	ListStmt -> Stmt                                   (9)
	ListStmt -> Stmt ';' ListStmt                      (10)
	Stmt -> Type Item                                  (11)
	Stmt -> Expr ';'                                   (12)
	Stmt -> 'if' '(' Expr ')' Block                    (13)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (14)
	Stmt -> 'while' '(' Expr ')' Block                 (15)
	Stmt -> 'for' '(' Ident 'from' Expr 'to' Expr ')' Block   (16)
	Stmt -> 'print' '(' ListExpr ')' ';'               (17)
	Stmt -> 'printEndl' '(' ListExpr ')' ';'           (18)
	Stmt -> 'return' Expr ';'                          (19)
	Stmt -> 'return' ';'                               (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> 'fun' Ident '(' ListArg ')' '->' Type Block   (22)
	Stmt -> Ident '.' 'push' '(' Expr ')'              (23)
	Item -> Ident                                      (24)
	Item -> Ident '=' Expr                             (25)
	ListItem -> Item                                   (26)
	ListItem -> Item ',' ListItem                      (27)
	ListExpr ->                                        (28)
	ListExpr -> Expr                                   (29)
	ListExpr -> Expr ',' ListExpr                      (30)
	ListExpr ->                                        (31)
	ListExpr -> Expr                                   (32)
	ListExpr -> Expr ',' ListExpr                      (33)
	Arg -> TypeOrRef Ident                             (34)
	ListArg ->                                         (35)
	ListArg -> Arg                                     (36)
	ListArg -> Arg ',' ListArg                         (37)
	Type -> 'int'                                      (38)
	Type -> 'bool'                                     (39)
	Type -> 'string'                                   (40)
	Type -> 'void'                                     (41)
	Type -> 'list' '<' Type '>'                        (42)
	Type -> 'lambda' '<' '(' ListTypeOrRef ')' '->' Type '>'   (43)
	ListType ->                                        (44)
	ListType -> Type                                   (45)
	ListType -> Type ',' ListType                      (46)
	TypeOrRef -> Type                                  (47)
	TypeOrRef -> '&' Type                              (48)
	ListTypeOrRef ->                                   (49)
	ListTypeOrRef -> TypeOrRef                         (50)
	ListTypeOrRef -> TypeOrRef ',' ListTypeOrRef       (51)
	AddOp -> '+'                                       (52)
	AddOp -> '-'                                       (53)
	MulOp -> '*'                                       (54)
	MulOp -> '/'                                       (55)
	MulOp -> '%'                                       (56)
	RelOp -> '<'                                       (57)
	RelOp -> '<='                                      (58)
	RelOp -> '>'                                       (59)
	RelOp -> '>='                                      (60)
	RelOp -> '=='                                      (61)
	RelOp -> '!='                                      (62)
	Expr -> Expr1 'or' Expr                            (63)
	Expr -> Expr1                                      (64)
	Expr1 -> Expr2 'and' Expr1                         (65)
	Expr1 -> Expr2                                     (66)
	Expr2 -> Expr2 RelOp Expr3                         (67)
	Expr2 -> Expr3                                     (68)
	Expr3 -> Expr3 AddOp Expr4                         (69)
	Expr3 -> Expr4                                     (70)
	Expr4 -> Expr4 MulOp Expr5                         (71)
	Expr4 -> Expr5                                     (72)
	Expr5 -> '-' Expr6                                 (73)
	Expr5 -> 'not' Expr6                               (74)
	Expr5 -> Expr6                                     (75)
	Expr5 -> Expr6 '.' 'len()'                         (76)
	Expr5 -> Expr6 '.' 'at' '(' Expr6 ')'              (77)
	Expr6 -> Expr6 '(' ListExprOrRef ')'               (78)
	Expr6 -> Expr7                                     (79)
	Expr7 -> Integer                                   (80)
	Expr7 -> Ident                                     (81)
	Expr7 -> 'true'                                    (82)
	Expr7 -> 'false'                                   (83)
	Expr7 -> Type '[]'                                 (84)
	Expr7 -> String                                    (85)
	Expr7 -> '(' ListArg ')' '->' Type Block           (86)
	Expr7 -> '(' Expr ')'                              (87)
	ListIdent ->                                       (88)
	ListIdent -> Ident                                 (89)
	ListIdent -> Ident ',' ListIdent                   (90)
	ExprOrRef -> Expr                                  (91)
	ExprOrRef -> '&' Ident                             (92)
	ListExprOrRef ->                                   (93)
	ListExprOrRef -> ExprOrRef                         (94)
	ListExprOrRef -> ExprOrRef ',' ListExprOrRef       (95)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'[]'           { PT _ (TS _ 20) }
	'and'          { PT _ (TS _ 21) }
	'at'           { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'for'          { PT _ (TS _ 26) }
	'from'         { PT _ (TS _ 27) }
	'fun'          { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'lambda'       { PT _ (TS _ 31) }
	'len()'        { PT _ (TS _ 32) }
	'list'         { PT _ (TS _ 33) }
	'not'          { PT _ (TS _ 34) }
	'or'           { PT _ (TS _ 35) }
	'print'        { PT _ (TS _ 36) }
	'printEndl'    { PT _ (TS _ 37) }
	'push'         { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'string'       { PT _ (TS _ 40) }
	'to'           { PT _ (TS _ 41) }
	'true'         { PT _ (TS _ 42) }
	'void'         { PT _ (TS _ 43) }
	'while'        { PT _ (TS _ 44) }
	'{'            { PT _ (TS _ 45) }
	'}'            { PT _ (TS _ 46) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	ListStmt        rules 6, 7, 8, 9, 10
	Stmt            rules 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23
	Item            rules 24, 25
	ListItem        rules 26, 27
	ListExpr        rules 28, 29, 30, 31, 32, 33
	Arg             rule  34
	ListArg         rules 35, 36, 37
	Type            rules 38, 39, 40, 41, 42, 43
	ListType        rules 44, 45, 46
	TypeOrRef       rules 47, 48
	ListTypeOrRef   rules 49, 50, 51
	AddOp           rules 52, 53
	MulOp           rules 54, 55, 56
	RelOp           rules 57, 58, 59, 60, 61, 62
	Expr            rules 63, 64
	Expr1           rules 65, 66
	Expr2           rules 67, 68
	Expr3           rules 69, 70
	Expr4           rules 71, 72
	Expr5           rules 73, 74, 75, 76, 77
	Expr6           rules 78, 79
	Expr7           rules 80, 81, 82, 83, 84, 85, 86, 87
	ListIdent       rules 88, 89, 90
	ExprOrRef       rules 91, 92
	ListExprOrRef   rules 93, 94, 95

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	'bool'         shift, and enter state 20
	'false'        shift, and enter state 21
	'for'          shift, and enter state 22
	'fun'          shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'lambda'       shift, and enter state 26
	'list'         shift, and enter state 27
	'not'          shift, and enter state 28
	'print'        shift, and enter state 29
	'printEndl'    shift, and enter state 30
	'return'       shift, and enter state 31
	'string'       shift, and enter state 32
	'true'         shift, and enter state 33
	'void'         shift, and enter state 34
	'while'        shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37
	%eof           reduce using rule 8
			(reduce using rule 6)


	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	ListStmt       goto state 7
	Stmt           goto state 8
	Type           goto state 9
	Expr           goto state 10
	Expr1          goto state 11
	Expr2          goto state 12
	Expr3          goto state 13
	Expr4          goto state 14
	Expr5          goto state 15
	Expr6          goto state 16
	Expr7          goto state 17

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'and'          reduce using rule 1
	'bool'         reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'from'         reduce using rule 1
	'fun'          reduce using rule 1
	'if'           reduce using rule 1
	'int'          reduce using rule 1
	'lambda'       reduce using rule 1
	'list'         reduce using rule 1
	'not'          reduce using rule 1
	'or'           reduce using rule 1
	'print'        reduce using rule 1
	'printEndl'    reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'}'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	%eof           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 21)
	Stmt -> Ident . '.' 'push' '(' Expr ')'             (rule 23)
	Expr7 -> Ident .                                    (rule 81)

	'!='           reduce using rule 81
	'%'            reduce using rule 81
	'('            reduce using rule 81
	'*'            reduce using rule 81
	'+'            reduce using rule 81
	'-'            reduce using rule 81
	'.'            shift, and enter state 82
			(reduce using rule 81)

	'/'            reduce using rule 81
	';'            reduce using rule 81
	'<'            reduce using rule 81
	'<='           reduce using rule 81
	'='            shift, and enter state 83
	'=='           reduce using rule 81
	'>'            reduce using rule 81
	'>='           reduce using rule 81
	'and'          reduce using rule 81
	'or'           reduce using rule 81


State 4

	Expr7 -> Integer .                                  (rule 80)

	'!='           reduce using rule 80
	'%'            reduce using rule 80
	'('            reduce using rule 80
	')'            reduce using rule 80
	'*'            reduce using rule 80
	'+'            reduce using rule 80
	','            reduce using rule 80
	'-'            reduce using rule 80
	'.'            reduce using rule 80
	'/'            reduce using rule 80
	';'            reduce using rule 80
	'<'            reduce using rule 80
	'<='           reduce using rule 80
	'=='           reduce using rule 80
	'>'            reduce using rule 80
	'>='           reduce using rule 80
	'and'          reduce using rule 80
	'bool'         reduce using rule 80
	'false'        reduce using rule 80
	'for'          reduce using rule 80
	'fun'          reduce using rule 80
	'if'           reduce using rule 80
	'int'          reduce using rule 80
	'lambda'       reduce using rule 80
	'list'         reduce using rule 80
	'not'          reduce using rule 80
	'or'           reduce using rule 80
	'print'        reduce using rule 80
	'printEndl'    reduce using rule 80
	'return'       reduce using rule 80
	'string'       reduce using rule 80
	'to'           reduce using rule 80
	'true'         reduce using rule 80
	'void'         reduce using rule 80
	'while'        reduce using rule 80
	'}'            reduce using rule 80
	L_Ident        reduce using rule 80
	L_integ        reduce using rule 80
	L_quoted       reduce using rule 80
	%eof           reduce using rule 80


State 5

	Expr7 -> String .                                   (rule 85)

	'!='           reduce using rule 85
	'%'            reduce using rule 85
	'('            reduce using rule 85
	')'            reduce using rule 85
	'*'            reduce using rule 85
	'+'            reduce using rule 85
	','            reduce using rule 85
	'-'            reduce using rule 85
	'.'            reduce using rule 85
	'/'            reduce using rule 85
	';'            reduce using rule 85
	'<'            reduce using rule 85
	'<='           reduce using rule 85
	'=='           reduce using rule 85
	'>'            reduce using rule 85
	'>='           reduce using rule 85
	'and'          reduce using rule 85
	'bool'         reduce using rule 85
	'false'        reduce using rule 85
	'for'          reduce using rule 85
	'fun'          reduce using rule 85
	'if'           reduce using rule 85
	'int'          reduce using rule 85
	'lambda'       reduce using rule 85
	'list'         reduce using rule 85
	'not'          reduce using rule 85
	'or'           reduce using rule 85
	'print'        reduce using rule 85
	'printEndl'    reduce using rule 85
	'return'       reduce using rule 85
	'string'       reduce using rule 85
	'to'           reduce using rule 85
	'true'         reduce using rule 85
	'void'         reduce using rule 85
	'while'        reduce using rule 85
	'}'            reduce using rule 85
	L_Ident        reduce using rule 85
	L_integ        reduce using rule 85
	L_quoted       reduce using rule 85
	%eof           reduce using rule 85


State 6

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 7

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 8

	ListStmt -> Stmt . ListStmt                         (rule 7)
	ListStmt -> Stmt .                                  (rule 9)
	ListStmt -> Stmt . ';' ListStmt                     (rule 10)

	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	';'            shift, and enter state 81
	'bool'         shift, and enter state 20
	'false'        shift, and enter state 21
	'for'          shift, and enter state 22
	'fun'          shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'lambda'       shift, and enter state 26
	'list'         shift, and enter state 27
	'not'          shift, and enter state 28
	'print'        shift, and enter state 29
	'printEndl'    shift, and enter state 30
	'return'       shift, and enter state 31
	'string'       shift, and enter state 32
	'true'         shift, and enter state 33
	'void'         shift, and enter state 34
	'while'        shift, and enter state 35
	'}'            reduce using rule 9
			(reduce using rule 8)
			(reduce using rule 6)

	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37
	%eof           reduce using rule 9
			(reduce using rule 8)
			(reduce using rule 6)


	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	ListStmt       goto state 80
	Stmt           goto state 8
	Type           goto state 9
	Expr           goto state 10
	Expr1          goto state 11
	Expr2          goto state 12
	Expr3          goto state 13
	Expr4          goto state 14
	Expr5          goto state 15
	Expr6          goto state 16
	Expr7          goto state 17

State 9

	Stmt -> Type . Item                                 (rule 11)
	Expr7 -> Type . '[]'                                (rule 84)

	'[]'           shift, and enter state 79
	L_Ident        shift, and enter state 2

	Ident          goto state 77
	Item           goto state 78

State 10

	Stmt -> Expr . ';'                                  (rule 12)

	';'            shift, and enter state 76


State 11

	Expr -> Expr1 . 'or' Expr                           (rule 63)
	Expr -> Expr1 .                                     (rule 64)

	'('            reduce using rule 64
	')'            reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	';'            reduce using rule 64
	'bool'         reduce using rule 64
	'false'        reduce using rule 64
	'for'          reduce using rule 64
	'fun'          reduce using rule 64
	'if'           reduce using rule 64
	'int'          reduce using rule 64
	'lambda'       reduce using rule 64
	'list'         reduce using rule 64
	'not'          reduce using rule 64
	'or'           shift, and enter state 75
	'print'        reduce using rule 64
	'printEndl'    reduce using rule 64
	'return'       reduce using rule 64
	'string'       reduce using rule 64
	'to'           reduce using rule 64
	'true'         reduce using rule 64
	'void'         reduce using rule 64
	'while'        reduce using rule 64
	'}'            reduce using rule 64
	L_Ident        reduce using rule 64
	L_integ        reduce using rule 64
	L_quoted       reduce using rule 64
	%eof           reduce using rule 64


State 12

	Expr1 -> Expr2 . 'and' Expr1                        (rule 65)
	Expr1 -> Expr2 .                                    (rule 66)
	Expr2 -> Expr2 . RelOp Expr3                        (rule 67)

	'!='           shift, and enter state 68
	'('            reduce using rule 66
	')'            reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	';'            reduce using rule 66
	'<'            shift, and enter state 69
	'<='           shift, and enter state 70
	'=='           shift, and enter state 71
	'>'            shift, and enter state 72
	'>='           shift, and enter state 73
	'and'          shift, and enter state 74
	'bool'         reduce using rule 66
	'false'        reduce using rule 66
	'for'          reduce using rule 66
	'fun'          reduce using rule 66
	'if'           reduce using rule 66
	'int'          reduce using rule 66
	'lambda'       reduce using rule 66
	'list'         reduce using rule 66
	'not'          reduce using rule 66
	'or'           reduce using rule 66
	'print'        reduce using rule 66
	'printEndl'    reduce using rule 66
	'return'       reduce using rule 66
	'string'       reduce using rule 66
	'to'           reduce using rule 66
	'true'         reduce using rule 66
	'void'         reduce using rule 66
	'while'        reduce using rule 66
	'}'            reduce using rule 66
	L_Ident        reduce using rule 66
	L_integ        reduce using rule 66
	L_quoted       reduce using rule 66
	%eof           reduce using rule 66

	RelOp          goto state 67

State 13

	Expr2 -> Expr3 .                                    (rule 68)
	Expr3 -> Expr3 . AddOp Expr4                        (rule 69)

	'!='           reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	'+'            shift, and enter state 65
	','            reduce using rule 68
	'-'            shift, and enter state 66
			(reduce using rule 68)

	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'and'          reduce using rule 68
	'bool'         reduce using rule 68
	'false'        reduce using rule 68
	'for'          reduce using rule 68
	'fun'          reduce using rule 68
	'if'           reduce using rule 68
	'int'          reduce using rule 68
	'lambda'       reduce using rule 68
	'list'         reduce using rule 68
	'not'          reduce using rule 68
	'or'           reduce using rule 68
	'print'        reduce using rule 68
	'printEndl'    reduce using rule 68
	'return'       reduce using rule 68
	'string'       reduce using rule 68
	'to'           reduce using rule 68
	'true'         reduce using rule 68
	'void'         reduce using rule 68
	'while'        reduce using rule 68
	'}'            reduce using rule 68
	L_Ident        reduce using rule 68
	L_integ        reduce using rule 68
	L_quoted       reduce using rule 68
	%eof           reduce using rule 68

	AddOp          goto state 64

State 14

	Expr3 -> Expr4 .                                    (rule 70)
	Expr4 -> Expr4 . MulOp Expr5                        (rule 71)

	'!='           reduce using rule 70
	'%'            shift, and enter state 61
	'('            reduce using rule 70
	')'            reduce using rule 70
	'*'            shift, and enter state 62
	'+'            reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'/'            shift, and enter state 63
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'and'          reduce using rule 70
	'bool'         reduce using rule 70
	'false'        reduce using rule 70
	'for'          reduce using rule 70
	'fun'          reduce using rule 70
	'if'           reduce using rule 70
	'int'          reduce using rule 70
	'lambda'       reduce using rule 70
	'list'         reduce using rule 70
	'not'          reduce using rule 70
	'or'           reduce using rule 70
	'print'        reduce using rule 70
	'printEndl'    reduce using rule 70
	'return'       reduce using rule 70
	'string'       reduce using rule 70
	'to'           reduce using rule 70
	'true'         reduce using rule 70
	'void'         reduce using rule 70
	'while'        reduce using rule 70
	'}'            reduce using rule 70
	L_Ident        reduce using rule 70
	L_integ        reduce using rule 70
	L_quoted       reduce using rule 70
	%eof           reduce using rule 70

	MulOp          goto state 60

State 15

	Expr4 -> Expr5 .                                    (rule 72)
